<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <ImageView
        android:id="@+id/draw_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/person_male_1" />

       <TextView
           android:id="@+id/text_user"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/user"
           android:textStyle="bold"
           android:textSize="20dp"
           android:layout_marginTop="5dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_lokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_1"
        android:contentDescription="@string/lokasi"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/store_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/store"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#733F0E" />
            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#733F0E" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/location_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/store_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#733F0E" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/find_on_maps"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#733F0E" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/location_pin_1"
                android:contentDescription="@string/icon_lokasi" />

        </LinearLayout>

        <Button
            android:id="@+id/button_menu"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/merah"
            android:text="@string/see_menus"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />


    </LinearLayout>

</LinearLayout>