<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables, UselessParent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/person_male_1"
                android:contentDescription="@string/user"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:text="@string/hello_user"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pizza"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/papperoni_pizza"
                android:src="@drawable/circle_cropped__27__1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/label_pizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pepperoni_pizza"
                    android:textSize="16sp"
                    android:textColor="#733F0E"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:clickable="true" />

                <TextView
                    android:id="@+id/label_pizza_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pizza"
                    android:textColor="#733F0E"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/spaghetti"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/circle_cropped__26__1"
                android:contentDescription="@string/spageti"  />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/label_spaghetti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spagetti"
                    android:textSize="16sp"
                    android:textColor="#733F0E"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/label_spaghetti_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_spagetti"
                    android:textColor="#733F0E"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/burger"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/circle_cropped__25__1"
                android:contentDescription="@string/burger" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/label_burger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_burger"
                    android:textSize="16sp"
                    android:textColor="#733F0E"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/label_burger_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/des_burger"
                    android:textColor="#733F0E"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/steak"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/circle_cropped__25__2"
                android:contentDescription="@string/steak" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/label_steak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_steak"
                    android:textSize="16sp"
                    android:textColor="#733F0E"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/label_steak_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/des_steak"
                    android:textColor="#733F0E"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_launcher_foreground"
        app:elevation="8dp"
        app:backgroundTint="@color/merah"
        app:fabSize="normal"
        app:tint="@android:color/white"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.FloatingActionButton.Circle" />


</LinearLayout>