<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FourthActivity">

    <ImageView
        android:id="@+id/img_pizza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/main_2"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/menu_details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Papperoni pizza"
        android:textSize="28dp"
        android:textStyle="bold"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_pizza" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/img_pizza">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#733F0E"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:layout_marginBottom="16dp"
        android:textColor="#733F0E"
        android:textStyle="bold"
        android:textSize="16dp"
        android:justificationMode="inter_word"
        />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/merah"
            android:text="@string/order"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/merah"
            android:layout_marginTop="5dp"
            android:text="@string/back"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>